# minishell

./: CMakeLists.txt  Makefile  main.c
Lib/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_split_free.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  (+6 more)
builtins/: cd.c  cd_utils.c  echo.c  env.c  exit.c  export.c  export_print.c  export_utils.c  help.c  pwd.c  unset.c
includes/: builtins.h  includes.h  logic.h  minishell.h  parser.h
kernel/: dups.c  env_utils.c  errors.c  init.c  loop.c  lst.c  parser.c  parser_utils.c  pipes.c  pipes_utils.c  redirects.c  signals.c  utils.c
